added more config data.

--- a/aecid-testsuite/demo/aminerJsonInputDemo/json-journal-demo.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/json-journal-demo.yml
@@ -592,12 +592,23 @@ Parser:
            - 'systemd-journal-flush.service'
            - 'systemd-sysctl.service'
            - 'systemd-udev-trigger.service'
-           - 'keyboard-setup.service'
+           - 'systemd-machine-id-commit.service'
+           - 'systemd-update-utmp.service'
            - 'systemd-ask-password-console.path'
+           - 'systemd-tmpfiles-setup.service'
+           - 'systemd-timesyncd.service'
+           - 'keyboard-setup.service'
            - 'cryptsetup.target'
            - 'local-fs-pre.target'
            - 'dev-ttyS0.device'
            - 'systemd-rfkill.socket'
+           - 'dev-disk-by-label-UEFI.device'
+           - 'boot-efi.mount'
+           - 'local-fs.target'
+           - 'plymouth-read-write.service'
+           - 'console-setup.service'
+           - 'ebtables.service'
+           - 'apparmor.service'
 
        - id: optional_key_INVOCATION_ID
          type: HexStringModelElement
