Fix styling issues and buggy code (DeepSource)
- 1 blank line required after class docstring FLK-D204 in source/root/usr/lib/logdata-anomaly-miner/aminer/AnalysisChild.py
- Missing module/function docstring PY-D0003 in source/root/usr/lib/logdata-anomaly-miner/aminer/analysis/EventFrequencyDetector.py
- Inconsistent return statements PYL-R1710 in source/root/usr/lib/logdata-anomaly-miner/aminer/util/PersistenceUtil.py
- Consider removing the commented out code block PY-W0069 in source/root/usr/lib/logdata-anomaly-miner/aminer/input/JsonStateMachine.py
- Appending to dictionary immediately following its definition PY-W0072 in source/root/etc/aminer/template_config.py by excluding in .deepsource.toml
- Skip PYL-W0221 in source/root/etc/aminer/conf-available/generic/AudispdParsingModel.py

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,7 +1,8 @@
 version = 1
 
 exclude_patterns = [
-  "aecid-testsuite/**"
+  "aecid-testsuite/**",
+  "source/root/etc/aminer/template_config.py"
 ]
 
 [[analyzers]]
