undid wrong refactoring from paths to target_path_list.

--- a/aecid-testsuite/demo/aminerJsonInputDemo/json-journal-demo.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/json-journal-demo.yml
@@ -685,7 +685,7 @@ Parser:
            - 'timers.target'
            - 'acpid.path'
            - 'acpid.socket'
-           - 'target_path_list.target'
+           - 'paths.target'
            - 'basic.target'
            - 'lxd-containers.service'
            - 'atd.service'
@@ -828,7 +828,7 @@ Parser:
            - 'gpg-agent-ssh.socket'
            - 'gpg-agent-browser.socket'
            - 'gpg-agent-extra.socket'
-           - 'target_path_list.target'
+           - 'paths.target'
            - 'dirmngr.socket'
            - 'gpg-agent.socket'
            - 'sockets.target'
