--- a/aecid-testsuite/unit/data/configfiles/wrong_log_resource_list.yml
+++ b/aecid-testsuite/unit/data/configfiles/wrong_log_resource_list.yml
@@ -19,7 +19,7 @@ Parser:
 
 Input:
         multi_source: False # optional
-        timestamp_paths: "/model/accesslog/time"
+        timestamp_path_list: "/model/accesslog/time"
 
 EventHandlers:
         - id: stpe
