--- a/aecid-testsuite/unit/data/configfiles/same_id_parser.yml
+++ b/aecid-testsuite/unit/data/configfiles/same_id_parser.yml
@@ -26,7 +26,7 @@ Input:
 Analysis:
         - type: NewMatchPathValueComboDetector
           id: NewMatchPathValueComboDetector1
-          paths: ["/model/accesslog/request","/model/accesslog/method"]
+          target_path_list: ["/model/accesslog/request","/model/accesslog/method"]
           learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
           output_logline: False
