--- a/aecid-testsuite/unit/data/configfiles/suppress_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/suppress_config.yml
@@ -30,7 +30,7 @@ Input:
 Analysis:
         - type: NewMatchPathValueComboDetector
           id: ValueComboDetector
-          paths: ["first/seq/s1","first/seq/d1"]
+          target_path_list: ["first/seq/s1","first/seq/d1"]
           persistence_id: 'accesslog_request' # optional default: Default
           output_logline: False
           allow_missing_values: False # optional default: False
