--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -27,14 +27,14 @@ Input:
 Analysis:
         - type: NewMatchPathValueDetector
           id: NewMatchPathValueDetector
-          paths: ["/model/accesslog/status"]
+          target_path_list: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
           output_logline: False
           learn_mode: True
 
         - type: NewMatchPathValueComboDetector
           id: NewMatchPathValueComboDetector1
-          paths: ["/model/accesslog/request","/model/accesslog/method"]
+          target_path_list: ["/model/accesslog/request","/model/accesslog/method"]
           learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
           output_logline: False
@@ -42,7 +42,7 @@ Analysis:
 
         - type: NewMatchPathValueComboDetector
           id: NewMatchPathValueComboDetector2
-          paths: ["/model/accesslog/request","/model/accesslog/status"]
+          target_path_list: ["/model/accesslog/request","/model/accesslog/status"]
           learn_mode: True
 
         - type: EventTypeDetector
